--- a/Webiline_front/index.html
+++ b/Webiline_front/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/cartwish-favicon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>CartWish - modern ecommerce application</title>
+  <title>Webiline - Modern online webinar app!</title>
 </head>
 
 <body>
